--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <!-- Boostrap CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
   <title>React App</title>
 </head>
 
@@ -27,9 +27,40 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
-    <script>
-      $('.carousel').carousel()
-    </script>
+  <script> 
+  // function for counting numbers
+    var flag = true; 
+    window.addEventListener('scroll', function () {
+      if (flag === true) { 
+        
+        var place = window.scrollY;
+        console.log(place)
+        var alertOn = document.getElementById('numbers').offsetTop;
+        console.log(alertOn)
+        if (place + 500 > alertOn) {
+          flag=false // to stop scroll function once run
+          let valueDisplays = document.querySelectorAll(".numCount");
+          let interval = 2000;
+
+          valueDisplays.forEach((valueDisplay) => {
+            let startValue = 0;
+            let endValue = parseInt(valueDisplay.getAttribute("data-val"));
+            let duration = Math.floor(interval / endValue);
+
+            let counter = setInterval(function () {
+              startValue += 1;
+              valueDisplay.textContent = startValue;
+              if (startValue === endValue) {
+                clearInterval(counter);
+              }
+            }, duration);
+          })
+        }
+      }
+
+    });
+
+  </script>
 </body>
 
 </html>
