completed clients page

--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,9 @@
       if (flag === true) { 
         
         var place = window.scrollY;
-        console.log(place)
+        // console.log(place)
         var alertOn = document.getElementById('numbers').offsetTop;
-        console.log(alertOn)
+        // console.log(alertOn)
         if (place + 500 > alertOn) {
           flag=false // to stop scroll function once run
           let valueDisplays = document.querySelectorAll(".numCount");
