reduced valuecount height

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
         // console.log(place)
         var alertOn = document.getElementById('numbers').offsetTop;
         // console.log(alertOn)
-        if (place + 200 > alertOn) {
+        if (place > alertOn) {
           flag=false // to stop scroll function once run
           let valueDisplays = document.querySelectorAll(".numCount");
           let interval = 2000;
